--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="email">Email:</string>
     <string name="phone">Phone:</string>
     <string name="balance">Balance:</string>
+    <string name="select_a_client">Select a client</string>
+    <string name="amount">$ %.2f</string>
 </resources>
