--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="balance">Balance:</string>
     <string name="select_a_client">Select a client</string>
     <string name="amount">$ %.2f</string>
+    <string name="transactions">Transactions</string>
+    <string name="arrow">arrow</string>
 </resources>
