--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,11 @@
     <string name="phone">Phone:</string>
     <string name="balance">Balance:</string>
     <string name="select_a_client">Select a client</string>
-    <string name="amount">%.2f $</string>
+    <string name="amount">$%.2f</string>
     <string name="transactions">Transactions</string>
     <string name="arrow">arrow</string>
     <string name="logo">logo</string>
     <string name="basic_bank_system">Basic Bank system</string>
+    <string name="client_details">Client Details</string>
+    <string name="transfer_money">Transfer Money</string>
 </resources>
